# CppTasks

./: CMakeLists.txt  README.md
CUDATasks/hw1/: README.md  kernel.cu
CUDATasks/hw2/non-optimized/: Console.cpp  HW2Stable.vcxproj  kernel.cu
CUDATasks/hw2/non-optimized/Debug/: kernel.cu.deps
CUDATasks/hw2/non-optimized/Debug/HW2Stable.tlog/: HW2Stable.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CUDATasks/hw2/optimized/: Complex.h  HW2.vcxproj  kernel.cu
CUDATasks/hw2/optimized/Debug/: kernel.cu.deps  vc120.idb
CUDATasks/hw2/optimized/Debug/HW2.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
builds/: CppTasks  CppTasks_with-omp  CppTasks_without-omp  hello  mpi_build
other/: MPI_scatter_gather  README.md  hw3_pp
other/CudaTasks/hw1/: kernel.cu
src/: main.cpp
src/graphics/open_gl/: Test.c
src/mathf/: Mathf.cpp  Mathf.h  Matrix.cpp  Matrix.h
src/parallel_tasks/: HW1.cpp  HW2.cpp  HW3.cpp  HW4.cpp  HW5.cpp  HW6.cpp  Ladder.cpp  README.md
src/parallel_tasks/hw1/: HW1.cpp  HW1.h
src/parallel_tasks/hw2/: HW2.cpp  HW2.h
src/parallel_tasks/hw3/: HW3.cpp
src/tests/: FIOStreamsTests.cpp  HW1Tests.cpp  HW2Tests.cpp
src/utils/: Console.cpp  Console.h  Generator.cpp  Generator.h
